plugins {
    id 'java'
    id 'application'
}

group 'CCFinderSW'
version '1.0.2'

sourceCompatibility = 1.17
mainClassName = 'ccfindersw.CCFSWLauncher'
def executableBaseName = group + "-" + version

repositories {
    mavenCentral()
}

dependencies {
    implementation group: 'org.antlr', name: 'antlr4-runtime', version: '4.11.1'
    implementation group: 'commons-cli', name: 'commons-cli', version: '1.4'
    implementation fileTree(include: '*.jar', dir: 'lib')
}

compileJava {
    options.encoding = 'UTF-8'
}

jar {
    manifest {
        attributes 'Main-Class' : mainClassName
    }
}
